@@ -6,6 +6,7 @@
 - vips_magickload() has an option to read all images in a sequence
 - redo im_make_xy(), im_*eye(), im_zone*(), im_sines() as classes
 - added vips_pngload_buffer()
+- faster --centre option to dzsave, thanks Kacey
 
 12/3/13 started 7.33.0
 - vipsthumbnail lets you specify the sharpening mask
